# LakeForge

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
dashboards/: performance_cost.lvdash.json  platform_operations.lvdash.json  sales_distribution.lvdash.json
docs/: azure-devops-setup.md  identity-matrix.md  network-design.md  performance-findings.md  requirements.md
docs/adr/: 0001-vnet-injection-vs-managed-vnet.md  0002-managed-identity-vs-sp-for-storage.md  0003-jdbc-vs-lakehouse-federation.md  0004-managed-tables-with-per-layer-locations.md  0005-zorder-vs-liquid-clustering.md  0006-dab-vs-terraform-for-jobs.md  0007-job-clusters-vs-serverless.md  0008-warehouse-serverless-vs-classic.md
infra/bootstrap/: bootstrap.ps1
infra/core/: budget.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/workspace/: cluster.tf  grants.tf  groups.tf  metastore.tf  ncc.tf  outputs.tf  providers.tf  secret_scope.tf  sql_warehouse.tf  terraform.tfvars.example  (+3 more)
notebooks/: 01_bronze_files.py  02_bronze_sql.py  03_silver.py  04_gold.py  05_refresh_metrics.py  99_cdf_demo.py
pipelines/: ci-cd.yml  terraform.yml
resources/: dashboards.yml  medallion_job.yml  perf_job.yml
scripts/: bootstrap_ci_workspace_admin.py  create_freshness_alert.py  dump_benchmarks.py  requirements.txt  run_p2_e2e.py  setup_ncc.py  verify_p1.py
seed/: generate_distributor_files.py  requirements.txt  schema.sql  seed_sql.py
tests/: conftest.py  test_gold.py  test_ingest.py  test_ops.py  test_perf.py  test_quality.py  test_silver.py
(+39 files in other folders)
